# homelab-assistant

./: .gitignore  LICENSE  Makefile  README.md  agent.py  env.example  langgraph.json  main.py  pyproject.toml
agents/: __init__.py
agents/discovery/: agent.py  nodes.py
agents/investigater/: agent.py  nodes.py  tools.py
agents/investigator/: agent.py  nodes.py  tools.py
agents/researcher/: agent.py  nodes.py  tools.py
skills/enhance/: SKILL.md
skills/investigator/: SKILL.md
skills/research/: SKILL.md
