[project]
name = "all-star-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.6",
    "dotenv>=0.9.9",
    "langchain-openai>=1.2.2",
    "langfuse>=4.7.0",
    "langgraph-api>=0.9.0",
    "langgraph-cli>=0.4.27",
    "langgraph-sdk>=0.3.15",
]
